--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
     "firebase": "^9.14.0",
     "ionicons": "^6.0.3",
     "rxjs": "~6.6.0",
